test/interaction/Issue983.out
Agda2> (agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Type-checking*" "Checking Issue983-Lib (Issue983-Lib.agda).\n" t)
(agda2-info-action "*Type-checking*" "Finished Issue983-Lib.\n" t)
(agda2-status-action "Checked")
(agda2-info-action "*All Goals*" "" nil)
((last . 1) . (agda2-goals-action '()))
Agda2> (agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Type-checking*" "Checking Issue983 (Issue983.agda).\n" t)
(agda2-info-action "*Type-checking*" " Checking Issue983-Bad (Issue983-Bad.agda).\n" t)
(agda2-info-action "*Error*" "Issue983-Bad.agda:2,7-31\nNot in scope:\n  Issue983-Lib.NonExisting\n  at Issue983-Bad.agda:2,7-31\nwhen scope checking Issue983-Lib.NonExisting" nil)
((last . 3) . (agda2-goto '("Issue983-Bad.agda" . 32)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
Agda2> (agda2-info-action "*Error*" "\nAn internal error has occurred. Please report this as a bug.\nLocation of the error:\nsrc/full/Agda/Interaction/InteractionTop.hs:852" nil)
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
Agda2> 