test/interaction/Issue983.agda
open import Issue983-Bad
